exports[`CallNoteList should render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {},
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
        ]
      }>
      Call Notes
    </Text>
    <TouchableNativeFeedback
      onPress={[Function]}>
      <View
        style={
          Array [
            Object {
              "position": "absolute",
              "top": 24,
            },
            Object {},
          ]
        }>
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {},
            ]
          } />
      </View>
    </TouchableNativeFeedback>
  </View>
  <ScrollView />
</View>
`;

exports[`CallNoteList should render call notes as rows 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {},
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
        ]
      }>
      Call Notes
    </Text>
    <TouchableNativeFeedback
      onPress={[Function]}>
      <View
        style={
          Array [
            Object {
              "position": "absolute",
              "top": 24,
            },
            Object {},
          ]
        }>
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {},
            ]
          } />
      </View>
    </TouchableNativeFeedback>
  </View>
  <ScrollView>
    <TouchableNativeFeedback
      callNoteId={1}
      onPress={[Function]}>
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "#dfe5e6",
            "marginLeft": 24,
            "marginRight": 24,
            "paddingBottom": 32,
            "paddingTop": 26,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#003035",
                "fontSize": 18,
                "textAlign": "left",
              },
            ]
          }>
          Wed, Sep 28, 7:34 pm
        </Text>
      </View>
    </TouchableNativeFeedback>
    <TouchableNativeFeedback
      callNoteId={2}
      onPress={[Function]}>
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "#dfe5e6",
            "marginLeft": 24,
            "marginRight": 24,
            "paddingBottom": 32,
            "paddingTop": 26,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#003035",
                "fontSize": 18,
                "textAlign": "left",
              },
            ]
          }>
          Wed, Sep 28, 7:34 pm
        </Text>
      </View>
    </TouchableNativeFeedback>
  </ScrollView>
</View>
`;
